// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
.pf-c-background-image.css-jrvmr5 {
  display: block;
}

<div
  className="pf-c-background-image css-jrvmr5"
/>
`;

exports[`BackgroundImage 2`] = `
.pf-c-background-image.css-jrvmr5 {
  display: block;
}

<div
  className="pf-c-background-image css-jrvmr5"
/>
`;

exports[`allows passing in a single string as the image src 1`] = `
.pf-c-background-image.css-1eio177 {
  display: block;
}

<div
  className="pf-c-background-image css-1eio177"
/>
`;
